# Ecommerce

./: .env.example  .gitignore  .pylintrc  BASEMODEL_COMPARISON.md  BASEMODEL_GUIDE.md  Makefile  PROJECT_ANALYSIS.md  README.md  logging_config.json  pyproject.toml  pytest.ini  run.py  setup.cfg
app/: __init__.py  main.py
app/configuration/: __init__.py
app/configuration/providers/: __init__.py  client.py  connectors.py  repository.py  request_context.py  service.py  settings.py
app/internal/models/: __init__.py
app/internal/models/cart/: __init__.py  api.py  repo.py  repository.py
app/internal/models/product/: __init__.py  api.py  base.py  repository.py  request.py  response.py
app/internal/models/user/: __init__.py  request.py  response.py
app/internal/pkg/middlewares/: __init__.py  timeout.py  (+3 more)
app/internal/repository/: __init__.py  base.py
app/internal/routes/: __init__.py  cart.py  product.py  users_example.py
app/internal/service/: __init__.py  cart.py  product.py
app/pkg/client/: __init__.py  base.py  example.py
app/pkg/connectors/: __init__.py  base.py  postgres.py
app/pkg/logger/: __init__.py  logger.py  uvicorn_config.py
app/pkg/settings/: __init__.py  settings.py
migrations/: 0001_initial_schema.py  20260226_01_mSxWF-create-product-table.py  20260226_02_sEpiR-timestamp-function.py  20260226_03_TjEKJ-create-cart-table.py
scripts/: migrate.py
tests/: conftest.py
tests/fixtures/: __init__.py  data.py
tests/integration/: test_database.py  test_health.py
tests/unit/: test_http_client_base.py  test_models.py  test_repository.py
(+22 files in other folders)
